[package]
name = "tilecutter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }
itertools = "0.13.0"
ryu = "1.0.18"
serde = { version = "1.0.204", features = ["derive"] }
toml = { version = "0.8.15", default-features = false, features = ["parse"]}
